--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
-PORT=5001
-MONGODB_URI=mongodb://localhost:27017/trumps-dashboard
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+NODE_ENV=dev
+PORT=3001
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
+MONGODB_URI=mongodb://localhost:27017/trumps-dashboard-dev
+CLIENT_URL=http://localhost:3000
