--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "prod": "NODE_ENV=production node server.js",
+    "health": "curl -f http://localhost:3001/api/health || exit 1"
   },
   "dependencies": {
     "express": "^4.18.2",
