--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trumps-dashboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/trumps",
+  "homepage": ".",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
